--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "multiselect-react-dropdown": "^2.0.25",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7",
     "styled-components": "^6.0.8",
     "zod": "^3.22.4"
   },
