--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-toolbar": "^1.0.4",
-    "@tiptap/extension-heading": "^2.1.12",
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
