feat: Firebase implemented

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "firebase": "^10.5.2",
     "multiselect-react-dropdown": "^2.0.25",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
